# maieutica

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  function_app.py  local.settings.example.json  package.json  poetry.toml  pyproject.toml  requirements.txt
.cursor/: CONTEXT.md
.cursor/rules/: maieutica-core.mdc  python-tutor-api.mdc
agents/: __init__.py  analyst.py  graph.py  llm.py  router.py  strategist.py  tutor.py
agents/rag/: __init__.py  azure.py  graph.py  indexer.py  query.py
docs/: portugol_referencia.md
services/: __init__.py  ping.py  tutor_help.py  tutor_help_stream.py
tests/: __init__.py  conftest.py  test_analyst.py  test_graph.py  test_help_service.py  test_help_stream.py  test_llm.py  test_ping.py  test_rag_query.py  test_router.py  test_strategist.py  test_tutor.py
